# PrinterSlowMotion

./: CMakeLists.txt  CodeExplanationReadMe.docx  README.md  buildrunmenu.sh
include/: ColorChooser.hpp  PrintWriter.hpp
src/: ColorChooser.cpp  PrintWriter.cpp  main.cpp
